--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "postcss-cli": "^8.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
@@ -18,7 +19,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:css": "postcss -w src/tailwind.css -o src/tailwind.output.css",
     "build": "react-scripts build",
+    "build:css": "postcss src/tailwind.css -o src/tailwind.output.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -39,5 +42,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.3",
+    "autoprefixer": "^9.8.6",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
   }
 }
